<resources>
    <string name="app_name">Guess Word Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_ready_to">Get ready to</string>
    <string name="guess_word">Guess Word!</string>
    <string name="play">play</string>
    <string name="got_it">got it!</string>
    <string name="end_game">end game</string>
    <string name="word">Word</string>
    <string name="current_word">Current word:</string>
    <string name="play_again">play again</string>
    <string name="your_score">Your score:</string>
</resources>